# QPM

./: Cargo.toml
src/: main.rs
~/.qpm/: config.json
