[package]
edition = "2021"
name = "qpm"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
chrono = "0.4.19"
clap = {version = "3.1.18", features = ["derive"]}
futures = "0.3.21"
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0.81"
tokio = {version = "1.18.2", features = ["full"]}
tokio-util = {version = "0.7.1", features = ["codec"]}
